--- a/force-app/main/default/classes/BatchExtractContentVersions.cls
+++ b/force-app/main/default/classes/BatchExtractContentVersions.cls
@@ -1,6 +1,6 @@
 /**
- * @description Batch job to extract and process ContentVersions (including ContentNotes)
- * @author Master's Student - SDLC Demonstration
+ * @description Batch job to extract and process ContentVersions
+ * @author Mritesh Adak
  * @date 2025
  */
 public with sharing class BatchExtractContentVersions implements Database.Batchable<SObject>, Database.Stateful {
@@ -12,21 +12,11 @@ public with sharing class BatchExtractContentVersions implements Database.Batcha
     private String sampleError;
     private Unified_Sync_Log__c logRecord;
     
-    /**
-     * @description Constructor
-     * @param mode Sync mode (FULL or DELTA)
-     * @param lookbackMinutes Lookback period for DELTA mode
-     */
     public BatchExtractContentVersions(SyncMode mode, Integer lookbackMinutes) {
         this.mode = mode;
         this.lookbackMinutes = lookbackMinutes;
     }
     
-    /**
-     * @description Start method - builds query
-     * @param bc Batch context
-     * @return Database.QueryLocator Query locator for ContentVersions
-     */
     public Database.QueryLocator start(Database.BatchableContext bc) {
         this.logRecord = UnifiedSyncLogService.startLog(
             'BatchExtractContentVersions',
@@ -48,17 +38,10 @@ public with sharing class BatchExtractContentVersions implements Database.Batcha
         return Database.getQueryLocator(query);
     }
     
-    /**
-     * @description Execute method - processes batches
-     * @param bc Batch context
-     * @param contentVersions List of ContentVersions to process
-     */
     public void execute(Database.BatchableContext bc, List<ContentVersion> contentVersions) {
         try {
-            // Step 1: Map ContentVersions to DTOs
             List<FileDTO> fileDtos = FileRecordMapper.fromContentVersions(contentVersions);
             
-            // Step 2: Enrich with parent information
             Set<Id> documentIds = new Set<Id>();
             for (ContentVersion cv : contentVersions) {
                 documentIds.add(cv.ContentDocumentId);
@@ -66,7 +49,6 @@ public with sharing class BatchExtractContentVersions implements Database.Batcha
             
             Map<Id, ParentInfo> parentMap = ParentSelectorService.selectPrimaryParentsForDocuments(documentIds);
             
-            // Apply parent info to DTOs
             for (FileDTO dto : fileDtos) {
                 ParentInfo parentInfo = parentMap.get(dto.sourceId);
                 if (parentInfo != null && parentInfo.isValid()) {
@@ -76,17 +58,14 @@ public with sharing class BatchExtractContentVersions implements Database.Batcha
                 }
             }
             
-            // Step 3: Upsert to Unified_File__c
-            List<Database.SaveResult> results = UnifiedFileUpsertService.upsertUnifiedFiles(fileDtos);
+            List<Database.UpsertResult> results = UnifiedFileUpsertService.upsertUnifiedFiles(fileDtos);
             
-            // Step 4: Track results
             Map<String, Integer> summary = UnifiedFileUpsertService.analyzeSaveResults(results);
             totalProcessed += summary.get('success');
             totalErrors += summary.get('errors');
             
-            // Capture first error
             if (sampleError == null) {
-                for (Database.SaveResult result : results) {
+                for (Database.UpsertResult result : results) {
                     if (!result.isSuccess()) {
                         sampleError = result.getErrors()[0].getMessage();
                         break;
@@ -103,10 +82,6 @@ public with sharing class BatchExtractContentVersions implements Database.Batcha
         }
     }
     
-    /**
-     * @description Finish method - logs results
-     * @param bc Batch context
-     */
     public void finish(Database.BatchableContext bc) {
         UnifiedSyncLogService.completeLog(
             logRecord,
