--- a/force-app/main/default/classes/HourlyDeltaScheduler.cls
+++ b/force-app/main/default/classes/HourlyDeltaScheduler.cls
@@ -1,31 +1,23 @@
 /**
  * @description Scheduler for hourly delta synchronization
- * @author Master's Student - SDLC Demonstration
+ * @author Mritesh Adak
  * @date 2025
  */
 public class HourlyDeltaScheduler implements Schedulable {
     
-    /**
-     * @description Execute method called by the scheduler
-     * @param sc Schedulable context
-     */
     public void execute(SchedulableContext sc) {
         System.debug('HourlyDeltaScheduler triggered at: ' + Datetime.now());
         
         try {
-            // Load configuration
             Unified_Sync_Config__mdt config = getConfig();
             
-            // Check if hourly delta is enabled
             if (!config.hourlyDeltaEnabled__c) {
                 System.debug('Hourly delta sync is disabled in configuration');
                 return;
             }
             
-            // Get lookback minutes from config
             Integer lookbackMinutes = Integer.valueOf(config.hourlyDeltaLookbackMins__c);
             
-            // Initiate orchestrator
             SyncOrchestrator.initiate(SyncMode.DELTA, lookbackMinutes);
             
             System.debug('HourlyDeltaScheduler initiated DELTA sync with lookback: ' + 
@@ -41,10 +33,6 @@ public class HourlyDeltaScheduler implements Schedulable {
         }
     }
     
-    /**
-     * @description Gets configuration from CMDT
-     * @return Unified_Sync_Config__mdt Configuration record
-     */
     private Unified_Sync_Config__mdt getConfig() {
         try {
             return [
@@ -59,10 +47,6 @@ public class HourlyDeltaScheduler implements Schedulable {
         }
     }
     
-    /**
-     * @description Returns default configuration
-     * @return Unified_Sync_Config__mdt Default config
-     */
     private Unified_Sync_Config__mdt getDefaultConfig() {
         Unified_Sync_Config__mdt config = new Unified_Sync_Config__mdt();
         config.hourlyDeltaEnabled__c = true;
@@ -70,14 +54,7 @@ public class HourlyDeltaScheduler implements Schedulable {
         return config;
     }
     
-    /**
-     * @description Schedules the job to run hourly
-     * @param jobName Name for the scheduled job
-     * @return String The scheduled job ID
-     */
     public static String scheduleHourly(String jobName) {
-        // Schedule to run every hour
-        // CRON expression: 0 0 * * * ? (every hour at minute 0)
         String cronExpression = '0 0 * * * ?';
         
         HourlyDeltaScheduler scheduler = new HourlyDeltaScheduler();
