--- a/force-app/main/default/classes/ParentInfo.cls
+++ b/force-app/main/default/classes/ParentInfo.cls
@@ -1,6 +1,6 @@
 /**
  * @description Wrapper class for parent record information
- * @author Master's Student - SDLC Demonstration
+ * @author Mritesh Adak
  * @date 2025
  */
 public class ParentInfo {
