--- a/force-app/main/default/classes/SyncMode.cls
+++ b/force-app/main/default/classes/SyncMode.cls
@@ -1,6 +1,6 @@
 /**
  * @description Enumeration for synchronization modes
- * @author Master's Student - SDLC Demonstration
+ * @author Mritesh Adak
  * @date 2025
  */
 public enum SyncMode {
